backend/src/main/java/com/example/payment/error/exception/MerchantNotActiveException.java
package com.example.payment.error.exception;

public class MerchantNotActiveException extends Exception {
}
